# boostydownloader

./: Cargo.toml  How to use  README.txt
.github/workflows/: rust.yml
src/: main.rs
src/boosty/: request.rs
src/utils/: mod.rs
